--- a/index.html
+++ b/index.html
@@ -111,19 +111,22 @@
                         <div class="imagem-vini">
                             <img src="images/IMG_20231106_142002_123.jpg" class="image-fluid" alt="">
                         </div>
-                        <h3>Vinicius Tavares</h3>
+                        <h2>Vinicius Tavares</h2>
+                        <h3 style="font-size: 20px;">Gerente Full Stack</h3>
                     </div><!--especialidades-box-->
                     <div class="especialidades-box">
                         <div class="imagem-vini">
                             <img src="images/WhatsApp Image 2023-12-15 at 13.03.48.jpeg" class="image-fluid" alt="">
                         </div>
-                        <h3>Leticia Mariano</h3>
+                        <h2>Leticia Mariano</h2>
+                        <h3 style="font-size: 20px;">Dev. Back-End</h3>
                     </div><!--especialidades-box-->
                     <div class="especialidades-box">
                         <div class="imagem-vini">
                             <img src="images/WhatsApp Image 2023-12-15 at 13.03.04.jpeg" class="image-fluid" alt="">
                         </div>
-                        <h3>Josue George</h3>
+                        <h2>Josue George</h2>
+                        <h3 style="font-size: 20px;">Dev. Front-End</h3>
                     </div><!--especialidades-box-->
                 </div>
             </div>
